--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,1 +1,10 @@
-<link rel="import" href="../bower_components/site-list/site-list.html">
+<!-- Iron elements 
+  <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+-->
+  <link rel="import" href="../bower_components/polymer/polymer.html">
+  <link rel="import" href="../bower_components/get-geo-data/get-geo-data.html">
+  <link rel="import" href="../bower_components/paper-button/paper-button.html">
+  <link rel="import" href="../bower_components/google-map/google-map.html">
+  <link rel="import" href="../bower_components/geohash-js/geohash-js.html">
+  <link rel="import" href="../bower_components/google-map/google-map-search.html">
+  <link rel="import" href="../bower_components/paper-material/paper-material.html">
